# parasolpy

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml
dev/: TODO.md
docs/: changelog.md  cli.md  conf.py  index.md  installation.md  quickstart.md
docs/api/: index.rst
docs/examples/: index.md  ism.md  nowak.md  reservoir.md  trace-plots.md  tradeoff.md  unit-conversions.md
docs/user-guide/: file-processing.md  ism.md  nowak.md  plotting.md  reservoir.md  tradeoff.md  utilities.md
examples/: 01_reservoir_sequent_peak.py  02_ism_traces.py  03_tradeoff_parallel_plot.py  04_trace_plots.py  05_unit_conversions.py  06_nowak_disaggregation.py  07_borg_archive_lifespan.py  README.md  rdf_cli_commands.bat
examples/_output/: tradeoff_nd.csv  tradeoff_parallel.html
examples/_unrefactored_example_scripts/: 06746110.csv  06751490.csv  06752260.csv  README.md  index.ipynb  minimal_dash_app.py  mkdir_output_tutorial.py  nowak_basic_examples.py  nowak_oakcreek_example.py  oak_creek_monthly_af.xlsx  oak_sim_monthly.xlsx  sort_and_plot_tradeoffs.py
examples/_unrefactored_example_scripts/file_processing_demo/: README.md  file_processing_demo.ipynb
examples/_unrefactored_example_scripts/file_processing_demo/data/: NondominatedSolutions.superheader.csv  TradeoffAnalysis.single_header.csv
examples/_unrefactored_example_scripts/file_processing_demo/outputs/: NondominatedSolutions.decisions.csv  NondominatedSolutions.objectives.csv  NondominatedSolutions.single_header.csv
examples/_unrefactored_example_scripts/minimal_dash_app/: README.md  minimal_dash_app.ipynb
examples/_unrefactored_example_scripts/mkdir_output_tutorial/: README.md  mkdir_output_tutorial.ipynb
examples/_unrefactored_example_scripts/nowak_basic_examples/: README.md  nowak_basic_examples.ipynb
examples/_unrefactored_example_scripts/nowak_basic_examples/data/: minimal_model_v1.1.mdl  minimal_problem_v3.xml
examples/_unrefactored_example_scripts/nowak_oakcreek_example/: README.md  nowak_oakcreek_example.ipynb
examples/_unrefactored_example_scripts/nowak_oakcreek_example/output/: oak_sim_monthly.xlsx
examples/_unrefactored_example_scripts/sort_and_plot_tradeoffs/: README.md  sort_and_plot_tradeoffs.ipynb
examples/_unrefactored_example_scripts/sort_and_plot_tradeoffs/data/: Plot.HiPlot.csv  redriver_v1.8.3.xml
parasolpy/: __init__.py  borg_runtime.py  dash_tools.py  file_processing.py  interactive.py  ism.py  moea.py  nowak.py  plotting.py  rdf.py  reservoir.py  tradeoff.py  util.py
scripts/: release.py  release.sh
tests/: test_borg_runtime.py  test_ism.py  test_nowak.py  test_package.py  test_rdf.py  test_reservoir.py  test_tradeoff.py  test_util_conversions.py  test_util_paths.py  test_util_pivot.py
