[project]
name = "parasolpy"
version = "0.0.2"
description = "Python tools for multi-objective decision analysis and visualization"
authors = [
    {name = "Joseph Kasprzyk",email = "joseph.kasprzyk@colorado.edu"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hiplot (>=0.1.33,<0.2.0)",
    "platypus-opt (>=1.4.1,<2.0.0)",
    "pandas (>=2.0.2,<4.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "dash (>=4.1.0,<5.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
